--- a/src/ColorBox/ColorBox.css
+++ b/src/ColorBox/ColorBox.css
@@ -8,11 +8,6 @@
 }
 
 
-
-.copy-container {
- 
-}
-
 .copy-button {
   position: absolute;
   width: 100px;
@@ -29,6 +24,7 @@
   border: none;
   text-transform: uppercase;
   opacity: 0;
+  cursor: pointer;
 }
 
 .ColorBox:hover .copy-button {
@@ -59,4 +55,58 @@
   height: 30px;
   text-align: center;
   line-height: 30px;
+}
+
+.copy-overlay {
+  opacity: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 0;
+  transition: transform 0.6s ease-in-out;
+
+}
+
+.copy-overlay.show {
+  opacity: 1;
+  transform: scale(50);
+  z-index: 10;
+  position: absolute;
+}
+
+.copy-msg {
+  position: fixed;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  font-size: 3rem;
+  transform: scale(0.1);
+  opacity: 0;
+  color: #fff;
+}
+
+.copy-msg.show {
+  opacity: 1;
+  transform: scale(1);
+  z-index: 15;
+  transition: all 0.4s ease-in-out;
+  transition-delay: 0.2s;
+}
+
+.copy-msg h1 {
+  font-weight: 400;
+  text-shadow: 1px 2px #000;
+  background: rgba(255, 255 , 255, 0.2);
+  width: 100%;
+  text-align: center;
+  margin-bottom: 0;
+  text-transform: uppercase;
+}
+
+.copy-msg p {
+  font-size: 2rem;
 }
