--- a/src/Palette/Palette.css
+++ b/src/Palette/Palette.css
@@ -6,3 +6,32 @@
   display: flex;
   flex-wrap: wrap;
 }
+
+.slider {
+  width: 340px;
+  margin: 0 10px;
+  display: inline-block;
+}
+
+.rc-slider-track {
+  background-color: transparent;
+}
+
+.rc-slider-rail {
+  height: 8px;
+}
+
+.rc-slider-handle,
+.rc-slider-handle:active,
+.rc-slider-handle:focus,
+
+.rc-slider-handle:hover {
+  background-color: green;
+  outline: none;
+  border: 2px solid green;
+  box-shadow: none;
+  margin-top: -3px;
+  margin-left: -7px;
+  width: 13px;
+  height: 13px;
+}
