--- a/src/Navbar/Navbar.css
+++ b/src/Navbar/Navbar.css
@@ -1,6 +1,6 @@
 .Navbar {
   display: flex;
-  height: 6vh;
+  height: 7vh;
   align-items: center;
 }
 
@@ -47,4 +47,9 @@
   margin-left: -7px;
   width: 13px;
   height: 13px;
+}
+
+.select-container {
+  margin-left: auto;
+  margin-right: 10px;
 }
