--- a/src/Palette/Palette.css
+++ b/src/Palette/Palette.css
@@ -5,10 +5,12 @@
 }
 .Palette-colors {
   height: 90%;
+  display: flex;
+  flex-wrap: wrap;
 }
 
 .Palette-footer {
-  background-color: #fff;
+  background-color: white;
   height: 5vh;
   display: flex;
   justify-content: flex-end;
