--- a/src/ColorBox/ColorBox.css
+++ b/src/ColorBox/ColorBox.css
@@ -7,7 +7,8 @@
   cursor: pointer;
 }
 
-.copy-button {
+.copy-button,
+.back-button {
   position: absolute;
   width: 100px;
   height: 30px;
@@ -22,13 +23,16 @@
   outline: none;
   border: none;
   text-transform: uppercase;
-  opacity: 0;
   cursor: pointer;
+}
+
+.copy-button {
+  opacity: 0;
 }
 
 .ColorBox:hover .copy-button {
   opacity: 1;
-  transition: 0.5s;
+  transition: 0.3s;
 }
 
 .box-content {
@@ -41,6 +45,14 @@
   letter-spacing: 1px;
   text-transform: uppercase;
   font-size: 12px;
+}
+
+.light-text {
+  color: #fff;
+}
+
+.ColorBox .dark-text {
+  color: rgba(0, 0, 0, 0.8);
 }
 
 .see-more {
@@ -62,7 +74,6 @@
   height: 100%;
   z-index: 0;
   transition: transform 0.6s ease-in-out;
-
 }
 
 .copy-overlay.show {
@@ -99,7 +110,7 @@
 .copy-msg h1 {
   font-weight: 400;
   text-shadow: 1px 2px #000;
-  background: rgba(255, 255 , 255, 0.2);
+  background: rgba(255, 255, 255, 0.2);
   width: 100%;
   text-align: center;
   margin-bottom: 0;
