--- a/src/SingleColorPalette/SingleColorPalette.css
+++ b/src/SingleColorPalette/SingleColorPalette.css
@@ -1,4 +1,12 @@
-.SingleColorPalette {
-  height: 100vh;
-  width: 100%;  
+.SingleColorPalette .ColorBox {
+  height: 40%;
 }
+
+.SinglePalette-go-back {
+  background: black;
+}
+
+.go-back {
+  text-decoration: none;
+}
+
